force-app/main/default/objects/Contact/fields/CAZ_Clave_JDE__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Clave_JDE__c</fullName>
    <formula>Account.ClaveJDE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Clave JDE del Distribuidor (Cuenta) asociado al Contacto</inlineHelpText>
    <label>CAZ_Clave_JDE</label>
    <type>Text</type>
</CustomField>