force-app/main/default/objects/Contact/fields/CAZ_Factura__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Factura__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si el campo esta marcado, es el Contacto utilizado para recibir la(s) Factura(s)</inlineHelpText>
    <label>CAZ_Factura</label>
    <type>Checkbox</type>
</CustomField>