force-app/main/default/objects/Contact/fields/CAZ_IdExterno__c.field-meta.xml
<CustomField>
    <fullName>CAZ_IdExterno__c</fullName>
    <description>Valor obsoleto - 13.05.2026</description>
    <externalId>true</externalId>
    <inlineHelpText>Valor único de cada Contacto. Valor obsoleto - 13.05.2026</inlineHelpText>
    <label>CAZ_IdExterno</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>